# pixi

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  generate_project_files.bat  project_config.cmake  run_clang_format.bat  run_clang_tidy.bat
engine/: CMakeLists.txt
engine/source/: CMakeLists.txt
engine/source/editor/: CMakeLists.txt
engine/source/editor/ed_core/: CMakeLists.txt
engine/source/editor/ed_core/private/: editor_core_launch.cpp  editor_core_launch.h
engine/source/editor/ed_engine/: CMakeLists.txt  editor_engine_pch.h
engine/source/editor/ed_engine/private/: pixi_editor_engine.cpp  pixi_editor_engine_internal.h
engine/source/editor/ed_engine/public/: pixi_editor_engine.h
engine/source/editor/ed_frontend/: CMakeLists.txt  editor_frontend_pch.h
engine/source/editor/ed_frontend/private/: editor_mainframe.cpp
engine/source/editor/ed_frontend/private/common/: font.cpp
engine/source/editor/ed_frontend/private/utils/: imgui_misc.cpp
engine/source/editor/ed_frontend/private/widgets/: dockspace.cpp
engine/source/editor/ed_frontend/public/: editor_const.h  editor_mainframe.h
engine/source/editor/ed_frontend/public/common/: alignment.h  font.h
engine/source/editor/ed_frontend/public/styles/: editor_style.h
engine/source/editor/ed_frontend/public/utils/: imgui_draw_utils.h  imgui_misc.h
engine/source/editor/ed_frontend/public/widgets/: widget.h
engine/source/editor/editor_core/: CMakeLists.txt  editor_core_module.cpp  editor_core_module.h  editor_core_pch.h
engine/source/editor/editor_core/private/: editor_core_launch.cpp  editor_core_launch.h
engine/source/editor/editor_core/public/: editor_core.h  editor_core_launch.h
engine/source/editor/editor_engine/: CMakeLists.txt  editor_engine_module.h  editor_engine_pch.h
engine/source/editor/editor_engine/private/: editor_engine.cpp  editor_engine_internal.h  pixi_editor_engine.cpp  pixi_editor_engine_internal.h
engine/source/editor/editor_engine/public/: editor_engine.h  editor_engine_module.h  pixi_editor_engine.h
engine/source/editor/editor_frontend/: CMakeLists.txt  editor_frontend_module.cpp  editor_frontend_module.h  editor_frontend_pch.h
engine/source/editor/editor_frontend/private/: editor_mainframe.cpp
engine/source/editor/editor_frontend/private/common/: font.cpp
engine/source/editor/editor_frontend/private/gui/: asset_browser.cpp  console.cpp  footer.cpp  header.cpp  inspector.cpp  scene_hierarchy.cpp  viewport.cpp
engine/source/editor/editor_frontend/private/imgui/: imgui_dockspace.cpp  imgui_draw_utils.cpp  imgui_editor_helper.cpp
engine/source/editor/editor_frontend/private/panels/: asset_browser.cpp  console.cpp  footer.cpp  header.cpp  inspector.cpp  scene_hierarchy.cpp  viewport.cpp
engine/source/editor/editor_frontend/private/styles/: editor_style.cpp
engine/source/editor/editor_frontend/private/utils/: imgui_draw_utils.cpp  imgui_misc.cpp
engine/source/editor/editor_frontend/private/widgets/: button.cpp  dockspace.cpp  label.cpp  panel.cpp  panel_header.cpp  text_filter.cpp
engine/source/editor/editor_frontend/public/: editor_const.h  editor_mainframe.h
engine/source/editor/editor_frontend/public/common/: alignment.h  callbacks.h  common_widgets.h  font.h  formatting.h
engine/source/editor/editor_frontend/public/gui/: asset_browser.h  console.h  editor_widget.h  footer.h  gui_const.h  header.h  inspector.h  scene_hierarchy.h  viewport.h
engine/source/runtime/: CMakeLists.txt
engine/source/runtime/core/: CMakeLists.txt  core_module.h  core_pch.h
engine/source/runtime/core/private/: core.cpp  core_globals.cpp  core_globals_internal.h  core_misc.cpp  core_misc_internal.h
engine/source/runtime/core/private/log/: log.cpp
engine/source/runtime/core/public/: compiler.h  core.h  core_globals.h  core_minimal.h  core_misc.h  core_module.h  platform.h  version.h
engine/source/runtime/engine/: CMakeLists.txt  engine_pch.h
engine/source/runtime/engine/private/: engine.cpp  engine_internal.h  pixi_engine.cpp  pixi_engine_internal.h
engine/source/runtime/engine/public/: engine.h  engine_module.h  pixi_engine.h
engine/source/runtime/frontend/: CMakeLists.txt  frontend_module.h  frontend_pch.h
engine/source/runtime/frontend/public/: frontend_module.h
engine/source/runtime/launch/: CMakeLists.txt  launch_pch.h
engine/source/runtime/launch/private/: launch.cpp  launch_engine_loop.cpp  launch_engine_loop.h
engine/source/runtime/rendercore/: CMakeLists.txt  rendercore_module.h  rendercore_pch.h
engine/source/runtime/rendercore/private/: render_graph.cpp  render_resource.cpp
engine/source/runtime/rendercore/public/: base_renderer.h  render_graph.h  render_resource.h
engine/source/runtime/renderer/: CMakeLists.txt
engine/source/runtime/renderer/private/: renderer.cpp
engine/source/runtime/renderer/public/: renderer.h  renderer_module.h
engine/source/runtime/rhi/: CMakeLists.txt  rhi_module.h  rhi_pch.h
engine/source/runtime/rhi/private/: rhi.cpp  rhi_context.cpp  rhi_interface.cpp  rhi_resources.cpp  shader_utils.cpp
engine/source/runtime/rhi/public/: rhi.h  rhi_asserts.h  rhi_context.h  rhi_interface.h  rhi_module.h  rhi_profiler.h  rhi_resources.h  shader_utils.h
engine/source/runtime/ui/: CMakeLists.txt
engine/source/runtime/ui/public/: ui_module.h
engine/source/runtime/uicore/: CMakeLists.txt
engine/source/runtime/uicore/public/: uicore_module.h
engine/tools/cmake/: build.cmake  fetch_third_party.cmake  platform_check.cmake  run_clang_format.cmake  run_clang_tidy.cmake  utils.cmake
engine/tools/cmake/modules/: engine_module.cmake
engine/tools/cmake/platform/: platform_check.cmake
engine/tools/cmake/platform/toolchains/: t-x64-clang-cl.cmake  t-x64-clang.cmake  t-x64-msvc.cmake
engine/tools/python/: auxiliary.py  build_runner.py  clang_format_runner.py  clang_tidy_runner.py  commands.py  tools.py
engine/tools/scripts/: generate_project_files.bat  generate_project_vs2022.bat  setup_prereqs.bat
sandbox/: CMakeLists.txt
sandbox/source/: CMakeLists.txt
(+185 files in other folders)
